创建Concurrent工具类